# flare

./: CMakeLists.txt
src/: CMakeLists.txt  config.h
src/flare/: CMakeLists.txt  allocator.h  average.h  face.h  flare.h  flare_class.h  icosphere.h  itypes.h  mesh.h  null_type.h  static_string.h  tracker.h  type_name.h  types.h  vector.h
src/flare/geometry/: face.h  icosphere.h  mesh.h
src/flare/math/: vector.h
src/flare/static/: enable_if.h  is_same.h  static_string.h
src/flare/type/: float_types.h  int_types.h  null_type.h  types.h
src/flare/type/introspect/: flare_class.h  tracker.h  type_name.h
src/test/: CMakeLists.txt  stuff.cpp  test.cpp
