FILE (GLOB_RECURSE flare_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
SET (flare_LIBS ${OPENGL_LIBRARIES} ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
SET (flare_BIN ${PROJECT_NAME})

ADD_LIBRARY(${flare_BIN} SHARED ${flare_SRCS})
TARGET_LINK_LIBRARIES(${flare_BIN} ${flare_LIBS})

SET_TARGET_PROPERTIES(${flare_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${flare_BIN} CLEAN_DIRECT_OUTPUT 1)

TARGET_COMPILE_FEATURES(${flare_BIN} PUBLIC cxx_relaxed_constexpr)

INSTALL(TARGETS ${flare_BIN} DESTINATION bin)
