FILE (GLOB_RECURSE test_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
SET (test_LIBS flare)
SET (test_BIN "test")

ADD_EXECUTABLE(${test_BIN} ${test_SRCS})
TARGET_LINK_LIBRARIES(${test_BIN} ${test_LIBS})

SET_TARGET_PROPERTIES(${test_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${test_BIN} CLEAN_DIRECT_OUTPUT 1)

TARGET_COMPILE_FEATURES(${test_BIN} PRIVATE cxx_constexpr)

INSTALL(TARGETS ${test_BIN} DESTINATION bin)
